# ATOMIC

./: .gitignore  Deviation_Experiments.py  Evaluation_VR.py  Pipeline.ipynb  Pipeline.py  Pipeline.py.ipynb  Pipeline_VR.py  README.md  environment.yml  evaluate_soa.py  pyproject.toml  requirements.txt
OUTPUT_FILES/SIAFA1/: energy_consumption.txt
OUTPUT_FILES/SPINC/: energy_consumption.txt
OUTPUT_FILES/SSAx1/: energy_consumption.txt
OUTPUT_FILES/SSAx2/: energy_consumption.txt
OUTPUT_FILES/SSAx3/: energy_consumption.txt
OUTPUT_FILES/SSAx4/: energy_consumption.txt
Structures/: IMPLY_parameters.json  Semi-Parallel.json  Semi-Serial.json  Serial-Mult.json  Serial.json  VTEAM_parameters.json
algorithms/: PPU1.txt  PPU2.txt  PPU3.txt  SAID1.txt  SAID2.txt  SIAFA1.txt  SIAFA1b.txt  SPAID.txt  SPINC.txt  SSAx1.txt  SSAx2.txt  SSAx3.txt  SSAx4.txt  exact_Semi-Parallel.txt  exact_karimi.txt  exact_rohani.txt  exact_teimoory.txt  improved_serial_v2.txt  optimized_serial.txt  serial_copy.txt
configs/: PPU1.json  PPU2.json  PPU3.json  SAID1.json  SAID2.json  SIAFA1.json  SIAFA1b.json  SPAID.json  SPINC.json  SSAx1.json  SSAx2.json  SSAx3.json  SSAx4.json  Serial_exact.json  Serial_exact_improved_v2.json  Serial_exact_karimi.json  Serial_exact_rohani.json  Serial_exact_seiler.json  Serial_exact_teimoory.json  exact_Semi-Parallel.json  serial_copy.json
src/: Analyzer.py  ControlLogicGenerator.py  FunctionalValidation.py  FunctionalVerification.py  LogicState.py  PWMWriter.py  Plotter.py  Simulator.py  util.py
temp/: netlist_1.net  netlist_1.op.raw  netlist_1.raw
(+560 files in other folders)
