[project]
name = "ATOMIC_fabian_seiler"
version = "1.0"
authors = [
  { name="Fabian Seiler", email="fabian.seiler@tuwien.ac.at" },
]
description = "An Automatic Tool for Memristive IMPLY-based Circuit-level Simulation and Validation"
readme = "README.md"
requires-python = "==3.12"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://eclectx.org/index.html"
Issues = "https://github.com/fabianseiler/ATOMIC/issues"